dev/test_programs/INVALID/group12/scan_parse_errors/var_decl_error3.go
// only one type allowed per VarSpec

package main

func main() {
	var x int, y float64 = 0, 0.
	if false {
		println(x, y)
	}
}
